[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.13.0"
json = "0.12.4"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.12.0", features = ["full"] }
sha2 = "0.9.8"
hmac = "0.11.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
